# aura-plasma-sync

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: app.rs  color.rs  env.rs  env_check.rs  executor.rs  installer.rs  main.rs  portal.rs  tray.rs
