[package]
name = "aura-accent-sync"
version = "0.3.4"
edition = "2024"
authors = ["Neil Pandya <dev@neilpandya.com>"]
description = "A utility to sync Asus Aura lighting with your XDG-compatible desktop environment's accent color."
license = "GPL-3.0-or-later"

[dependencies]
gtk = { version = "0.18.2", features = ["v3_24"] }
# For DBus communication with the XDG Settings Portal
zbus = { version = "5.13.2", features = ["blocking"] }
# For flexible error handling
anyhow = "1.0.95"
# CLI arguments for install/uninstall/run
clap = { version = "4.5.57", features = ["derive"] }
# To check for system dependencies
which = "8.0.0"
# For standard logging
log = "0.4.29"
# For printing logs to the terminal
env_logger = "0.11.8"
# Cross-platform system tray icon
tray-icon = "0.21.3"
# Menu support for tray icon
menu = "0.6.1"
# Image buffer for icon generation
image = "0.25.9"
# For color parsing
hex = "0.4.3"
