[package]
name = "aura-accent-sync"
version = "0.5.1"
edition = "2024"
authors = ["Neil Pandya <dev@neilpandya.com>"]
description = "A utility to sync Asus Aura lighting with your XDG-compatible desktop environment's accent color."
license = "GPL-3.0-or-later"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link Time Optimization
codegen-units = 1    # Better optimization at the cost of compile time
panic = "abort"      # Remove panic unwinding code
strip = true         # Strip symbols from binary

[dependencies]
# System UI components
tray-icon = "0.21.3"
gtk = { version = "0.18.2", features = ["v3_24"] }

# System integration
zbus = { version = "5.13.2", features = ["blocking"] }

# Utility libraries
anyhow = "1.0.95"
log = "0.4.29"
env_logger = "0.11.8"
image = "0.25.9"

# CLI
clap = { version = "4.5.57", features = ["derive"] }
